OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 12:51:09 2022
	+ Build: Don't strip binary by default; add "install-strip" target
	+ Build: Make clean targets more robust; warn if unable to remove 'bin'
	+ Build: Add standard "clean", "distclean", "realclean", "mostlyclean",
	  and "maintainer-clean" targets to GNUmakefile.
	+ Increase default escapetime to 2/10ths of a second
	+ Add OpenBSD-compatible mkstemp function allowing for longer file names
	+ Silence some potential warnings with explicit casting
	+ Exit with error when screen is too small for visual mode
	+ Apply Debian patch to fix backwards sentence moving
	+ Fix horizontal scroll count; patch from Debian
	+ regexec: Change a #define to a typedef in regex library
	+ Documentation: Fix some typos and minor errors in the tutorials
	+ Update .gitignore to include patch/diff detritus; no binary change.
	+ Adjust calculation to avoid "BDB0511 page sizes must be a power-of-2"
	  warning; BDB 1.85 only cared if oage size was even; closes GH issue #3
	+ Apply .exrc writeability patch from hesso at pool.math.tu-berlin.de
	+ If TERM is unset, set to null, or otherwise unknown, first attempt
	  to fallback to "vt100"; exit with a fatal error if "vt100" fails.
	+ Disallow pattern spaces which would cause intermediate
	  calculations to overflow size_t. (CERT: VU#695940)
	+ Bump version and use -dev to denote development version
	+ Reformat ChangeLog for consistency; various spelling corrections
	+ Update ChangeLog with OpenVi history
	+ Format OpenBSD commits to ChangeLog format
	+ Documentation: Clean-up legacy documentation, adjust formatting
	+ Simplify GNUmakefile rules
	+ Update GNUmakefile; correct a typo in a message
	+ Update LICENSE text and formatting

OpenBSD 7.0 -> OpenVi 7.0.1: Mon Jan 24 10:37:28 2022
	+ OpenVi created supporting glibc-based Linux systems
	+ Build: Create GNUmakefile
	+ Build: Attempt to detect and use mtmalloc or jemalloc if available