@@ -616,27 +616,51 @@ cl_usage()
 {
 	switch (pmode) {
 	case MODE_EX:
-		(void)fprintf(stderr, "usage: "
+		(void)fprintf(stderr, "Usage: "
 #ifndef DB185EMU
+#ifdef DEBUG
+		    "ex [-FRrSsv] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
+#else
 		    "ex [-FRrSsv] [-c cmd] [-t tag] [-w size] [file ...]\n");
+#endif
+#else
+#ifdef DEBUG
+		    "ex [-FRSsv] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
 #else
 		    "ex [-FRSsv] [-c cmd] [-t tag] [-w size] [file ...]\n");
 #endif
+#endif
 		break;
 	case MODE_VI:
-		(void)fprintf(stderr, "usage: "
+		(void)fprintf(stderr, "Usage: "
 #ifndef DB185EMU
+#ifdef DEBUG
+		    "vi [-eFRrS] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
+#else
 		    "vi [-eFRrS] [-c cmd] [-t tag] [-w size] [file ...]\n");
+#endif
+#else
+#ifdef DEBUG
+		    "vi [-eFRS] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
 #else
 		    "vi [-eFRS] [-c cmd] [-t tag] [-w size] [file ...]\n");
 #endif
+#endif
 		break;
 	case MODE_VIEW:
-		(void)fprintf(stderr, "usage: "
+		(void)fprintf(stderr, "Usage: "
 #ifndef DB185EMU
+#ifdef DEBUG
+		    "view [-eFrS] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
+#else
 		    "view [-eFrS] [-c cmd] [-t tag] [-w size] [file ...]\n");
+#endif
+#else
+#ifdef DEBUG
+		    "view [-eFS] [-c cmd] [-t tag] [-w size] [-T tracefile] [file ...]\n");
 #else
 		    "view [-eFS] [-c cmd] [-t tag] [-w size] [file ...]\n");
+#endif
 #endif
 		break;
 	}
