@@ -1,4 +1,6 @@
 OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 12:51:09 2022
+	+ Build: Change DEBUG_VI flag to sinply DEBUG
+	+ Build: For debugging builds, document use use of -T (Trace) in usage
 	+ Build: Don't strip binary by default; add "install-strip" target
 	+ Build: Make clean targets more robust; warn if unable to remove 'bin'
 	+ Build: Add standard "clean", "distclean", "realclean", "mostlyclean",
